cafu37_오류파일__21시 12분 25초.txt
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 1380)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID cafu37
realPW tlarudtlr1!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\s1\Desktop\traffic\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
1608
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 124.198.43.191
IDID []
PWPW []
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  하나 일곱 둘 넷 여덟 일곱 → digits: 172487
변환된 텍스트: 172487
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
1608
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.67.58
IDID []
PWPW []
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  5, 4, 9, 9, 9, 6 → digits: 549996
변환된 텍스트: 549996
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
----
numpy.size(username3) 2
오예
next_numpy_count 100
numpy.size(username3) 2
2--next_numpy_count 40
2--numpy.size(username3) 40
끝
[while]counting2 0
driver_current _네이버 쇼핑 https://search.shopping.naver.com/search/all?query=%EC%8D%AC%EA%B0%80%EB%93%9C%EA%B4%91%ED%95%99%EC%B6%94%EC%B2%9C2026%EB%85%84
***********************************************
*****************페이지 정보********************
***********************************************
None
===============================================
----> 썬가드광학 2026년 티비보호기 신형 TV 액정필름 화면 보호대 커버 블루라이트차단 가드 아기 TB65 163cm(65인치) QLED OLED 벽걸이 LG 삼성 더프레임 더세리프
2찾음====================================================
1
counting2 0
counting2 0
-asdfiajsdf
index 0
a 태그 클릭 성공
스크롤 다운
스크롤 업
스크롤 업
스크롤 다운
스크롤 다운
스크롤 다운
스크롤 업
스크롤 업
아무것도
드라이버 백
지금 주소:
https://smartstore.naver.com/ssimall/products/6351155946?NaPm=ct%3Dmpfg556g%7Cci%3Db941102e17e782868b7b1b4ee0d6ade366a9929f%7Ctr%3Dslsl%7Csn%3D5332064%7Chk%3D984d7af59510e3caf755071957ee71fed082b1b0&nl-au=9fbbf272c41d412b86f977ee56da9b42&nl-query=%EC%8D%AC%EA%B0%80%EB%93%9C%EA%B4%91%ED%95%99%EC%B6%94%EC%B2%9C2026%EB%85%84
드라이버 백
지금 주소:
https://smartstore.naver.com/ssimall/products/6351155946?NaPm=ct%3Dmpfg556g%7Cci%3Db941102e17e782868b7b1b4ee0d6ade366a9929f%7Ctr%3Dslsl%7Csn%3D5332064%7Chk%3D984d7af59510e3caf755071957ee71fed082b1b0&nl-au=9fbbf272c41d412b86f977ee56da9b42&nl-query=%EC%8D%AC%EA%B0%80%EB%93%9C%EA%B4%91%ED%95%99%EC%B6%94%EC%B2%9C2026%EB%85%84
드라이버 백
지금 주소:
https://smartstore.naver.com/ssimall/products/6351155946?NaPm=ct%3Dmpfg556g%7Cci%3Db941102e17e782868b7b1b4ee0d6ade366a9929f%7Ctr%3Dslsl%7Csn%3D5332064%7Chk%3D984d7af59510e3caf755071957ee71fed082b1b0&nl-au=9fbbf272c41d412b86f977ee56da9b42&nl-query=%EC%8D%AC%EA%B0%80%EB%93%9C%EA%B4%91%ED%95%99%EC%B6%94%EC%B2%9C2026%EB%85%84
드라이버 백
지금 주소:
https://smartstore.naver.com/ssimall/products/6351155946?NaPm=ct%3Dmpfg556g%7Cci%3Db941102e17e782868b7b1b4ee0d6ade366a9929f%7Ctr%3Dslsl%7Csn%3D5332064%7Chk%3D984d7af59510e3caf755071957ee71fed082b1b0&nl-au=9fbbf272c41d412b86f977ee56da9b42&nl-query=%EC%8D%AC%EA%B0%80%EB%93%9C%EA%B4%91%ED%95%99%EC%B6%94%EC%B2%9C2026%EB%85%84
시크릿모드: delete_cache 스킵
뒤로가기 완료
스탑1
스탑1
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 2
1608
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.210.161
IDID []
PWPW []
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  2, 3, 1, 5, 9, 4 → digits: 231594
변환된 텍스트: 231594
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 3
1608
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 124.198.25.141
IDID []
PWPW []
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
크롬드라이버 강제 종료 성공
크롬드라이버 강제 종료 성공
* done recording
--로컬 STT 분석 시작
시작
File saved to: C:\Users\s1\Desktop\traffic\logfile.txt